fix: max height causing scrolling on mobile

--- a/frontend/src/components/PurchaseTickets/TicketPurchase/SeatSelection/seatSelection.scss
+++ b/frontend/src/components/PurchaseTickets/TicketPurchase/SeatSelection/seatSelection.scss
@@ -17,7 +17,7 @@
 	}
 
 	.list-group {
-		max-height: 240px;
+		max-height: 165px;
 
 		&-item {
 			user-select: none;
